--- a/Bakery bgvideo/index.html
+++ b/Bakery bgvideo/index.html
@@ -11,8 +11,8 @@
 <body>
     <div>
         <i class="fa fa-birthday-cake fa-3x" aria-hidden="true"></i>
-        <h1>Cakeshop</h1>
-        <p>Cakeshop comming soon!!</p>
+        <h1>Bakery</h1>
+        <p>Hotel comming soon!!</p>
         <button>Call us: +91 9876543210</button>
     </div>
     <video muted loop autoplay>
